# apps/backend/auth-service/src/docs/swagger.json
@@ -89,6 +89,41 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"LocationUser": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"lat": {
+						"type": "number",
+						"format": "double"
+					},
+					"lng": {
+						"type": "number",
+						"format": "double"
+					},
+					"googleMapsLink": {
+						"type": "string"
+					},
+					"dev_info": {
+						"$ref": "#/components/schemas/DeviceInfo"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"email",
+					"lat",
+					"lng",
+					"googleMapsLink",
+					"dev_info",
+					"createdAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"SignUpRequest": {
 				"properties": {
 					"username": {
@@ -372,6 +407,169 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/v1/auth/api/send-location": {
+			"post": {
+				"operationId": "SendLocation",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"dev_info": {},
+												"location": {},
+												"message": {},
+												"error": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"error"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"error": {},
+												"dev_info": {
+													"$ref": "#/components/schemas/DeviceInfo"
+												},
+												"location": {
+													"properties": {
+														"dev_info": {
+															"$ref": "#/components/schemas/DeviceInfo"
+														},
+														"googleMapsLink": {
+															"type": "string"
+														},
+														"lng": {
+															"type": "number",
+															"format": "double"
+														},
+														"lat": {
+															"type": "number",
+															"format": "double"
+														},
+														"email": {
+															"type": "string"
+														}
+													},
+													"required": [
+														"dev_info",
+														"googleMapsLink",
+														"lng",
+														"lat",
+														"email"
+													],
+													"type": "object"
+												},
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"dev_info",
+												"location",
+												"message"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"dev_info": {},
+												"location": {},
+												"message": {},
+												"error": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"message",
+												"error"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"tags": [
+					"Check Device Login Info"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									},
+									"lng": {
+										"type": "number",
+										"format": "double"
+									},
+									"lat": {
+										"type": "number",
+										"format": "double"
+									}
+								},
+								"required": [
+									"email",
+									"lng",
+									"lat"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/v1/auth/getCheckInfo": {
+			"get": {
+				"operationId": "GetCheckInfo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/LocationUser"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Check Device Login Info"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/v1/auth/google": {
